--- a/01_model_elasticsearch_tfidf_bm25.ipynb
+++ b/01_model_elasticsearch_tfidf_bm25.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "\n",
     "    for idTable in idRankedTables:\n",
     "    \n",
-    "        if idTable == idQueryGoal:\n",
+    "        if idTable[0] == idQueryGoal:\n",
     "    \n",
     "            accuracy = 1\n",
     "            break;\n",
@@ -37,47 +37,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'acknowledged': True, 'shards_acknowledged': True}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
-    "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"BM25\"}}}})\n",
+    "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
     "indexing_distinct_tables.indices.open(index='distinct_tables')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def search_indexing(query, tableField, topK):\n",
+    "def search_indexing(query,tableField):\n",
     "    \n",
     "    result= indexing_distinct_tables.search(\n",
     "        index=\"distinct_tables\", \n",
     "        body = {\n",
     "        \"_source\": [\"tablePgID\"],\n",
     "        \"from\" : 0,\n",
-    "        \"size\" : topK,\n",
+    "        \"size\" : 1000,\n",
     "        \"query\": {\n",
     "            \"multi_match\":{\n",
     "              \"type\": \"most_fields\",\n",
     "              \"query\":    query, \n",
-    "              \"fields\": [\"tablePgTitle\"] \n",
+    "              #\"fields\": [\"tablePgTitle\"] \n",
     "              #\"fields\": [\"tablePgTitle\",\"tableHeader\",\"tableBody\"] \n",
-    "              #\"fields\": [tableField]\n",
+    "              \"fields\": [tableField]\n",
     "            }\n",
     "        }\n",
     "    })\n",
@@ -87,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,77 +101,111 @@
     "    accuracy = []\n",
     "\n",
     "    for i,row in (articles.iterrows()):\n",
-    "    \n",
+    "\n",
     "        articl_key = row['page_id']\n",
-    "        article_title = row['page_title']\n",
-    "        article_meta_description = row['meta_description']\n",
-    "        \n",
-    "        #catch = article_title+\" \"+article_meta_description\n",
-    "            \n",
-    "        result = search_indexing(article_title,tableField,topK)\n",
-    "    \n",
-    "        idRankedTables = []\n",
-    "    \n",
-    "        for hit in result['hits']['hits']:\n",
-    "    \n",
-    "            tablePgId = hit['_source']['tablePgID']\n",
-    "    \n",
-    "            idRankedTables.append(tablePgId)\n",
-    "    \n",
-    "        accuracy.append(get_accuracy(idRankedTables,articl_key))\n",
+    "        article_title = row['page_title'] +\" \"+row['meta_description']\n",
+    "\n",
+    "        result = search_indexing(article_title,tableField)\n",
+    "\n",
+    "        if result['hits']['total'] > 0:\n",
+    "\n",
+    "            return_tables = []\n",
+    "\n",
+    "            for hit in result['hits']['hits']:\n",
+    "\n",
+    "                tablePgId = hit['_source']['tablePgID']\n",
+    "                table_score = hit['_score']\n",
+    "                new_row = {\"table_id\": tablePgId,\"table_score\": table_score}\n",
+    "                return_tables.append(new_row)\n",
+    "\n",
+    "            df_return_tables = pd.DataFrame(return_tables)\n",
+    "            df_return_tables_sorting = df_return_tables.sort_values('table_score', ascending=False)\n",
+    "\n",
+    "            selected_top = df_return_tables_sorting.head(topK)\n",
+    "            min_score = selected_top['table_score'].min()\n",
+    "            draw_tables_socres = df_return_tables_sorting[df_return_tables_sorting['table_score'] >= min_score]\n",
+    "            final_ranked_tables = draw_tables_socres.iloc[:,0:1].values\n",
+    "\n",
+    "            accuracy.append(get_accuracy(final_ranked_tables,articl_key))\n",
     "\n",
     "    print(str(round(np.mean(accuracy),4)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tableField = [\"tablePgTitle\"]\n",
-    "#tableField = [\"tablePgTitle\",\"tableSectionTitle\",\"tableCaption\",\"tableHeader\",\"tableBody\"]\n",
-    "topK = [100]"
+    "#tableField = [\"tablePgTitle\"]\n",
+    "tableField = [\"tablePgTitle\",\"tableSectionTitle\",\"tableCaption\",\"tableHeader\",\"tableBody\"]\n",
+    "topK = [1,5,10,20,100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k in topK:\n",
+    "    \n",
+    "    print(\"\")\n",
+    "    \n",
+    "    for field in tableField:\n",
+    "        \n",
+    "        print(\"Acc@\"+str(k)+\" - \"+field)\n",
+    "        \n",
+    "        execute_search(field,k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# for k in topK:\n",
     "    \n",
-    "#     print(\"\")\n",
+    "#     print(\"Acc@\"+str(k))\n",
     "    \n",
-    "#     for field in tableField:\n",
-    "        \n",
-    "#         print(\"Acc@\"+str(k)+\" - \"+field)\n",
-    "        \n",
-    "#         execute_search(field,k)"
+    "#     execute_search(\"\",k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Acc@100\n",
-      "0.46\n"
-     ]
-    }
-   ],
-   "source": [
-    "for k in topK:\n",
-    "    \n",
-    "    print(\"Acc@\"+str(k))\n",
-    "    \n",
-    "    execute_search(\"\",k)"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
