--- a/02_model_universal_sentence_encoder.ipynb
+++ b/02_model_universal_sentence_encoder.ipynb
@@ -4,26 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.15.0'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
+    "import tensorflow_hub as hub\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "from sklearn.metrics import pairwise_distances\n",
-    "from heapq import nsmallest\n",
-    "tf.__version__"
+    "from heapq import nsmallest"
    ]
   },
   {
@@ -32,8 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bert_serving.client import BertClient\n",
-    "bc = BertClient()"
+    "module_url = \"https://tfhub.dev/google/universal-sentence-encoder/4\""
    ]
   },
   {
@@ -42,8 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read = pd.read_csv('dataset/test_dataset', delimiter=',', header=None)\n",
-    "data_articles = read.iloc[:,:].values"
+    "embed = hub.load(module_url)"
    ]
   },
   {
@@ -52,8 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read = pd.read_csv('dataset/cleanDataTables', delimiter=',', header=None)\n",
-    "data_tables = read.iloc[:,:].values"
+    "articles = pd.read_csv('dataset/data_articles_test.csv', delimiter=',', keep_default_na=False)\n",
+    "tables = pd.read_csv('dataset/dataset_distinct_tables.csv', delimiter=',', keep_default_na=False)"
    ]
   },
   {
@@ -64,27 +51,25 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## creating the articles embedings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 23224.27it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "articles_title = []\n",
     "articles_id = []\n",
     "\n",
-    "for article_id, title, text in tqdm(data_articles):\n",
+    "for i, row in articles.iterrows():\n",
     "    \n",
-    "    articles_id.append(article_id)\n",
-    "    \n",
-    "    articles_title.append(title)"
+    "    articles_id.append(row['page_id'])\n",
+    "    articles_title.append(row['page_title'])"
    ]
   },
   {
@@ -93,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_articles = bc.encode(articles_title)"
+    "embedding_articles = embed(articles_title)"
    ]
   },
   {
@@ -106,7 +91,7 @@
     "\n",
     "for current_embedding in embedding_articles:\n",
     "    \n",
-    "    article_dense_vector.append(current_embedding)"
+    "    article_dense_vector.append(current_embedding.numpy())"
    ]
   },
   {
@@ -124,24 +109,33 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## creating the tables embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 25528.33it/s]\n"
+      "89935it [00:10, 8580.37it/s]\n"
      ]
     }
    ],
    "source": [
     "tables_title = []\n",
+    "tables_ids = []\n",
     "\n",
-    "for current_table in tqdm(data_tables):\n",
+    "for i, row in tqdm(tables.iterrows()):\n",
     "    \n",
-    "    tables_title.append(str(current_table[1]))"
+    "    tables_ids.append(row['table_id'])\n",
+    "    tables_title.append(row['table_page_title'])"
    ]
   },
   {
@@ -150,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_tables = bc.encode(tables_title)"
+    "embedding_tables = embed(tables_title)"
    ]
   },
   {
@@ -163,7 +157,7 @@
     "\n",
     "for current_embedding in embedding_tables:\n",
     "    \n",
-    "    tables_dense_vector.append(current_embedding)"
+    "    tables_dense_vector.append(current_embedding.numpy())"
    ]
   },
   {
@@ -181,36 +175,22 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def get_id_ranked_tables(top_k,distance_vector):\n",
-    "\n",
-    "    id_ranked_tables = []\n",
-    "\n",
-    "    for current_top_k in top_k:\n",
-    "        \n",
-    "        index = np.where(distance_vector == current_top_k)\n",
-    "         \n",
-    "        index_colummun = index[0][0]\n",
-    "        \n",
-    "        id_ranked_tables.append(data_tables[index_colummun][0])\n",
-    "\n",
-    "    return id_ranked_tables"
+    "## methods for getting the ranked tables and save the accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +200,7 @@
     "\n",
     "    for id_table in id_ranked_tables:\n",
     "    \n",
-    "        if id_table == id_query_goal:\n",
+    "        if id_table[0] == id_query_goal:\n",
     "    \n",
     "            accuracy = 1\n",
     "            \n",
@@ -231,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,81 +221,107 @@
     "            \n",
     "        average_top1.append(accuracy)\n",
     "        \n",
+    "    if k == 5:\n",
+    "            \n",
+    "        average_top5.append(accuracy)\n",
+    "        \n",
     "    if k == 10:\n",
     "            \n",
     "        average_top10.append(accuracy)\n",
     "        \n",
-    "    if k == 100:\n",
+    "    if k == 20:\n",
     "            \n",
-    "        average_top100.append(accuracy)\n",
-    "        \n",
-    "    if k == 1000:\n",
-    "            \n",
-    "        average_top1000.append(accuracy)"
+    "        average_top20.append(accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## computing the cosine similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 1535.59it/s]\n"
+      "100%|██████████| 1026/1026 [06:28<00:00,  2.89it/s]\n"
      ]
     }
    ],
    "source": [
     "average_top1 = []\n",
+    "average_top5 = []\n",
     "average_top10 = []\n",
-    "average_top100 = []\n",
-    "average_top1000 = []\n",
+    "average_top20 = []\n",
     "\n",
-    "top_k = [1,10,100,1000]\n",
+    "top_k = [1]\n",
     "\n",
     "for i in tqdm(range(len(article_dense_vector))):\n",
     "    \n",
-    "    distance_vector = pairwise_distances(article_dense_vector[i].reshape(1,768), tables_dense_vector, metric='cosine')\n",
+    "    idQueryGoal = articles_id[i]\n",
     "    \n",
-    "    id_query_goal = int(articles_id[i])\n",
+    "    distance_vector = pairwise_distances(article_dense_vector[i].reshape(1,512), tables_dense_vector, metric='cosine')\n",
     "    \n",
-    "    for accuracy_k in top_k:\n",
-    "        \n",
-    "        count_top_tables = accuracy_k\n",
-    "        \n",
-    "        top_k_rank = nsmallest(count_top_tables, distance_vector[0])\n",
+    "    #creating the dataframe\n",
+    "    all_tables_score = []\n",
     "    \n",
-    "        id_ranked_tables = get_id_ranked_tables(top_k_rank,distance_vector[0])\n",
+    "    for j in range(len(tables_ids)):\n",
     "        \n",
-    "        accuracy_value = get_accuracy(id_ranked_tables,id_query_goal)\n",
+    "        table_id = tables_ids[j]\n",
+    "        table_score = distance_vector[0][j]\n",
+    "        \n",
+    "        new_row = {\"table_id\": table_id,\"table_score\": table_score}\n",
+    "        \n",
+    "        all_tables_score.append(new_row)\n",
+    "        \n",
+    "    df_all_tables_scores = pd.DataFrame(all_tables_score)\n",
+    "    df_tables_sorting = df_all_tables_scores.sort_values('table_score')\n",
+    "    \n",
+    "    #compute the accuracy\n",
+    "    for accuracyK in top_k:\n",
+    "        \n",
+    "        selected_top = df_tables_sorting.head(accuracyK)\n",
+    "        min_score = selected_top['table_score'].max()\n",
+    "        draw_tables_socres = df_tables_sorting[df_tables_sorting['table_score'] <= min_score]\n",
+    "        final_ranked_tables = draw_tables_socres.iloc[:,0:1].values\n",
+    "        \n",
+    "        accuracy_value = get_accuracy(final_ranked_tables,idQueryGoal)\n",
     "        \n",
     "        #save the accuracy on the list\n",
-    "        save_accuracy(accuracy_k,accuracy_value)"
+    "        save_accuracy(accuracyK,accuracy_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0 (±) 0.0\n",
-      "0.0 (±) 0.0\n",
-      "0.0 (±) 0.0\n",
-      "0.0 (±) 0.0\n"
+      "0.1579\n"
      ]
     }
    ],
    "source": [
-    "print(str(round(np.mean(average_top1),4))+\" (±) \"+str(round(np.std(average_top1),4)))\n",
-    "print(str(round(np.mean(average_top10),4))+\" (±) \"+str(round(np.std(average_top10),4)))\n",
-    "print(str(round(np.mean(average_top100),4))+\" (±) \"+str(round(np.std(average_top100),4)))\n",
-    "print(str(round(np.mean(average_top1000),4))+\" (±) \"+str(round(np.std(average_top1000),4)))"
+    "print(str(round(np.mean(average_top1),4)))\n",
+    "print(str(round(np.mean(average_top5),4)))\n",
+    "print(str(round(np.mean(average_top10),4)))\n",
+    "print(str(round(np.mean(average_top20),4)))"
    ]
   },
   {
