--- a/03_model_doc2vec.ipynb
+++ b/03_model_doc2vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,48 +35,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/lss9/anaconda3/lib/python3.7/site-packages/smart_open/smart_open_lib.py:402: UserWarning: This function is deprecated, use smart_open.open instead. See the migration notes for details: https://github.com/RaRe-Technologies/smart_open/blob/master/README.rst#migrating-to-the-new-open-function\n",
-      "  'See the migration notes for details: %s' % _MIGRATION_NOTES_URL\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "embedding_model = Doc2Vec.load('pre_trained_models/doc2vec.bin')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "89935it [01:29, 1002.71it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tables_vector = []\n",
     "tables_ids = []\n",
     "\n",
     "for i, row in tqdm(tables.iterrows()):\n",
     "    \n",
-    "    table_id = row['table_id']\n",
     "    table_title = row['table_page_title']\n",
     "    \n",
     "    vector_words = tknzr.tokenize(table_title)\n",
     "    word_embedding = embedding_model.infer_vector(vector_words)\n",
     "    \n",
-    "    tables_ids.append(table_id)\n",
+    "    tables_ids.append(row['table_id'])\n",
     "    tables_vector.append(word_embedding) "
    ]
   },
@@ -89,33 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1026it [00:01, 774.60it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "articles_ids = []\n",
     "articles_vector = []\n",
     "\n",
     "for i, row in tqdm(articles.iterrows()):\n",
     "    \n",
-    "    article_id = row['page_id']\n",
     "    article_page_title = row['page_title']\n",
-    "    \n",
-    "    articles_ids.append(article_id)\n",
-    "        \n",
+    "         \n",
     "    #embedding\n",
     "    vector_words = tknzr.tokenize(article_page_title)\n",
     "    word_embedding = embedding_model.infer_vector(vector_words)\n",
     "    \n",
-    "    articles_ids.append(article_id)\n",
+    "    articles_ids.append(row['page_id'])\n",
     "    articles_vector.append(word_embedding)"
    ]
   },
@@ -128,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,17 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1026/1026 [05:10<00:00,  3.36it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "AverageTop1 = []\n",
     "AverageTop5 = []\n",
@@ -203,7 +166,7 @@
     "    \n",
     "    idQueryGoal = articles_ids[i]\n",
     "    \n",
-    "    distance_vector = pairwise_distances(articles_vector[i].reshape(1,300), tables_vector, metric='cosine')\n",
+    "    distance_vector = pairwise_distances(articles_vector[i].reshape(1,50), tables_vector, metric='cosine')\n",
     "    \n",
     "    #creating the dataframe\n",
     "    all_tables_score = []\n",
@@ -236,26 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(str(round(np.mean(AverageTop1),4)))\n",
     "print(str(round(np.mean(AverageTop5),4)))\n",
     "print(str(round(np.mean(AverageTop10),4)))\n",
     "print(str(round(np.mean(AverageTop20),4)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
