--- a/04_model_bert_as_service.ipynb
+++ b/04_model_bert_as_service.ipynb
@@ -4,15 +4,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.15.0'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
-    "import tensorflow_hub as hub\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "from sklearn.metrics import pairwise_distances\n",
-    "from heapq import nsmallest"
+    "from heapq import nsmallest\n",
+    "tf.__version__"
    ]
   },
   {
@@ -21,7 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "module_url = \"https://tfhub.dev/google/universal-sentence-encoder/4\""
+    "from bert_serving.client import BertClient\n",
+    "bc = BertClient()"
    ]
   },
   {
@@ -30,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embed = hub.load(module_url)"
+    "read = pd.read_csv('dataset/test_dataset', delimiter=',', header=None)\n",
+    "data_articles = read.iloc[:,:].values"
    ]
   },
   {
@@ -39,8 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "articles = pd.read_csv('dataset/data_articles_test.csv', delimiter=',', keep_default_na=False)\n",
-    "tables = pd.read_csv('dataset/dataset_distinct_tables.csv', delimiter=',', keep_default_na=False)"
+    "read = pd.read_csv('dataset/cleanDataTables', delimiter=',', header=None)\n",
+    "data_tables = read.iloc[:,:].values"
    ]
   },
   {
@@ -51,25 +64,27 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## creating the articles embedings"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 23224.27it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "articles_title = []\n",
     "articles_id = []\n",
     "\n",
-    "for i, row in articles.iterrows():\n",
+    "for article_id, title, text in tqdm(data_articles):\n",
     "    \n",
-    "    articles_id.append(row['page_id'])\n",
-    "    articles_title.append(row['page_title'])"
+    "    articles_id.append(article_id)\n",
+    "    \n",
+    "    articles_title.append(title)"
    ]
   },
   {
@@ -78,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_articles = embed(articles_title)"
+    "embedding_articles = bc.encode(articles_title)"
    ]
   },
   {
@@ -91,7 +106,7 @@
     "\n",
     "for current_embedding in embedding_articles:\n",
     "    \n",
-    "    article_dense_vector.append(current_embedding.numpy())"
+    "    article_dense_vector.append(current_embedding)"
    ]
   },
   {
@@ -107,13 +122,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## creating the tables embeddings"
-   ]
   },
   {
    "cell_type": "code",
@@ -124,18 +132,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "89935it [00:07, 11699.06it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 25528.33it/s]\n"
      ]
     }
    ],
    "source": [
     "tables_title = []\n",
-    "tables_ids = []\n",
     "\n",
-    "for i, row in tqdm(tables.iterrows()):\n",
+    "for current_table in tqdm(data_tables):\n",
     "    \n",
-    "    tables_ids.append(row['table_id'])\n",
-    "    tables_title.append(row['table_page_title'])"
+    "    tables_title.append(str(current_table[1]))"
    ]
   },
   {
@@ -144,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_tables = embed(tables_title)"
+    "embedding_tables = bc.encode(tables_title)"
    ]
   },
   {
@@ -157,7 +163,7 @@
     "\n",
     "for current_embedding in embedding_tables:\n",
     "    \n",
-    "    tables_dense_vector.append(current_embedding.numpy())"
+    "    tables_dense_vector.append(current_embedding)"
    ]
   },
   {
@@ -173,13 +179,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## methods for getting the ranked tables and save the accuracy"
-   ]
   },
   {
    "cell_type": "code",
@@ -193,6 +192,13 @@
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def get_accuracy(id_ranked_tables, id_query_goal):\n",
     "\n",
@@ -200,7 +206,7 @@
     "\n",
     "    for id_table in id_ranked_tables:\n",
     "    \n",
-    "        if id_table[0] == id_query_goal:\n",
+    "        if id_table == id_query_goal:\n",
     "    \n",
     "            accuracy = 1\n",
     "            \n",
@@ -211,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,28 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## computing the cosine similarity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1026/1026 [05:11<00:00,  3.23it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 1535.59it/s]\n"
      ]
     }
    ],
@@ -273,7 +265,7 @@
     "    \n",
     "    idQueryGoal = articles_id[i]\n",
     "    \n",
-    "    distance_vector = pairwise_distances(article_dense_vector[i].reshape(1,512), tables_dense_vector, metric='cosine')\n",
+    "    distance_vector = pairwise_distances(article_dense_vector[i].reshape(1,768), tables_dense_vector, metric='cosine')\n",
     "    \n",
     "    #creating the dataframe\n",
     "    all_tables_score = []\n",
@@ -306,17 +298,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1579\n",
-      "0.2398\n",
-      "0.2827\n",
-      "0.3207\n"
+      "0.0 (±) 0.0\n",
+      "0.0 (±) 0.0\n",
+      "0.0 (±) 0.0\n",
+      "0.0 (±) 0.0\n"
      ]
     }
    ],
@@ -326,6 +318,20 @@
     "print(str(round(np.mean(average_top10),4)))\n",
     "print(str(round(np.mean(average_top20),4)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
