--- a/table_retrieval_title_title.ipynb
+++ b/table_retrieval_title_title.ipynb
@@ -102,7 +102,7 @@
     "        body = {\n",
     "        \"_source\": [\"tablePgID\",\"tablePgTitle\"],\n",
     "        \"from\" : 0,\n",
-    "        \"size\" : 50,\n",
+    "        \"size\" : 100,\n",
     "        \"query\": {\n",
     "            \"multi_match\":{\n",
     "              \"type\": \"most_fields\",\n",
@@ -127,7 +127,7 @@
     "    \n",
     "    for table_ID in ranked_tables_ID:\n",
     "        \n",
-    "        if table_ID == ID_goal:\n",
+    "        if table_ID[0] == ID_goal:\n",
     "    \n",
     "            accuracy = 1\n",
     "            break;\n",
@@ -214,7 +214,7 @@
     }
    ],
    "source": [
-    "ranking_model = tf.keras.models.load_model('GRU_affinity_model_random_negatives_1_5.h5')"
+    "ranking_model = tf.keras.models.load_model('GRU_affinity_model_070_200k_fit_fasttext.h5')"
    ]
   },
   {
@@ -291,10 +291,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1026it [00:44, 23.02it/s]\n",
-      "1026it [00:44, 23.55it/s]\n",
-      "1026it [00:45, 23.48it/s]\n",
-      "1026it [00:44, 23.59it/s]\n"
+      "1026it [01:08, 17.22it/s]\n",
+      "1026it [01:01, 17.51it/s]\n",
+      "1026it [01:00, 17.34it/s]\n",
+      "1026it [01:00, 17.19it/s]\n"
      ]
     }
    ],
@@ -314,10 +314,10 @@
     {
      "data": {
       "text/plain": [
-       "[['Acc@1', '0.3627'],\n",
-       " ['Acc@5', '0.3822'],\n",
-       " ['Acc@10', '0.392'],\n",
-       " ['Acc@20', '0.4154']]"
+       "[['Acc@1', '0.3304'],\n",
+       " ['Acc@5', '0.3666'],\n",
+       " ['Acc@10', '0.391'],\n",
+       " ['Acc@20', '0.4135']]"
       ]
      },
      "execution_count": 14,
